[package]
name = "soctive-zeus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.0"
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.9"
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.13"
reqwest = { version = "0.11", features = ["json"] }